Fix layout chatbot for deployment

--- a/website/fe-web(1)/index.html
+++ b/website/fe-web(1)/index.html
@@ -1,22 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-  <title>fastfood-manager</title>
-
-  <!-- Tailwind -->
-  <script src="/files/tailwind.js"></script>
+  <title>FastFood - Đặt món trực tuyến</title>
 </head>
-
 <body>
-  <!-- React root -->
   <div id="root"></div>
-
-  <!-- Main JS (React entrypoint) -->
   <script type="module" src="/src/main.jsx"></script>
 </body>
-
 </html>
